# vida-stack

./: .gitignore  AGENTS.changelog.jsonl  AGENTS.md  AGENTS.scaffold.changelog.jsonl  AGENTS.sidecar.changelog.jsonl  AGENTS.sidecar.md  CODE_OF_CONDUCT.changelog.jsonl  CODE_OF_CONDUCT.md  CONTRIBUTING.changelog.jsonl  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.changelog.jsonl  README.md  RELEASE-1-IMPLEMENTATION-ROADMAP.md  RELEASE-1-SCOPE.md  SECURITY.changelog.jsonl  SECURITY.md  SUPPORT.changelog.jsonl  SUPPORT.md  VERSION-PLAN.changelog.jsonl  VERSION-PLAN.md  vida.config.yaml
.beads/: beads.db  config.yaml  issues.jsonl  mutation-queue.jsonl  runtime-mode.json
.beads/.br_history/: issues.20260308_112959.jsonl  issues.20260308_113000.jsonl  issues.20260308_113337.jsonl  issues.20260308_113731.jsonl  issues.20260308_113840.jsonl  issues.20260308_113841.jsonl  issues.20260308_113842.jsonl  issues.20260308_114018.jsonl  issues.20260308_114019.jsonl  issues.20260308_114020.jsonl  issues.20260308_114021.jsonl  issues.20260308_114022.jsonl  issues.20260308_114023.jsonl  issues.20260308_114217.jsonl  issues.20260308_114906.jsonl  issues.20260308_121432.jsonl  issues.20260308_121449.jsonl  issues.20260308_121528.jsonl  issues.20260308_122900.jsonl  issues.20260308_123215.jsonl  issues.20260308_123409.jsonl  issues.20260308_123416.jsonl  issues.20260308_123423.jsonl  issues.20260308_124333.jsonl  issues.20260308_124341.jsonl  issues.20260308_124350.jsonl  issues.20260308_124551.jsonl  issues.20260308_124558.jsonl  issues.20260308_124742.jsonl  issues.20260308_124810.jsonl  issues.20260308_125329.jsonl  issues.20260308_125339.jsonl  issues.20260308_130624.jsonl  issues.20260308_132451.jsonl  issues.20260308_134849.jsonl  issues.20260308_152123.jsonl  issues.20260308_152124.jsonl  issues.20260308_152156.jsonl  issues.20260308_154418.jsonl  issues.20260308_161835.jsonl  (+5 more)
.beads/backups/: issues-20260308-154653.jsonl  issues-20260308-161022.jsonl  issues-20260308-162639.jsonl  issues-20260308-163251.jsonl  issues-20260308-171050.jsonl  issues-20260308-172821.jsonl  issues-20260308-172843.jsonl  issues-20260308-173906.jsonl  issues-20260308-174104.jsonl  issues-20260308-174519.jsonl  issues-20260308-174804.jsonl  issues-20260308-175834.jsonl  issues-20260308-175856.jsonl  issues-20260308-182841.jsonl  issues-20260308-183057.jsonl  latest.meta.json
.cargo/: config.toml
.codex/: config.toml
.codex/agents/: architect.toml  development-coach.toml  (+12 more)
.githooks/: pre-commit
.github/: CODEOWNERS
.hermes/: README.md
.kilo/: README.md
.opencode/: README.md
.qwen/: README.md
.vida/: .gitignore
_vida/: CHANGELOG.md  commands.md  constitution.md  constraints.md  dual-model-protocol.md  owasp-integration.md  planning.md
codex-v0/: codex.py  docsys_policy.yaml  docsys_project.yaml  docsys_schema.yaml  requirements-python.txt
crates/docflow-cli/: Cargo.toml
crates/docflow-cli/src/: lib.rs  main.rs
crates/docflow-cli/tests/: cli_smoke.rs
crates/docflow-format-jsonl/: Cargo.toml
crates/docflow-format-jsonl/src/: lib.rs
crates/docflow-operator/: Cargo.toml
crates/docflow-operator/src/: lib.rs
crates/docflow-validation/: Cargo.toml
crates/docflow-validation/src/: lib.rs
crates/taskflow-format-jsonl/: Cargo.toml
crates/taskflow-format-jsonl/src/: lib.rs
crates/taskflow-state-fs/: Cargo.toml
crates/taskflow-state-fs/src/: lib.rs
crates/vida/: Cargo.toml
crates/vida/src/: activation_status.rs  agent_dispatch_surface.rs  agent_extension_bundle_validation.rs  agent_extension_catalog_projection.rs  agent_extension_registry_projection.rs  agent_feedback_surface.rs  approval_surface.rs  bootstrap_value_utils.rs  carrier_runtime_catalog.rs  carrier_runtime_metadata.rs  carrier_runtime_projection.rs  carrier_runtime_strategy.rs  cli.rs  compiled_agent_extension_bundle.rs  config_value_utils.rs  consume_final_operator_surface.rs  continuation_binding_summary.rs  contract_profile_adapter.rs  contract_profile_registry.rs  development_flow_glue.rs  development_flow_orchestration.rs  development_request_analysis.rs  docflow_proxy.rs  docflow_runtime_verdict.rs  doctor_surface.rs  host_agent_state.rs  host_runtime_materialization.rs  host_runtime_registry.rs  init_surfaces.rs  lane_surface.rs  launcher_activation_snapshot.rs  launcher_task_commands.rs  main.rs  memory_surface.rs  model_profile_contract.rs  operator_contracts.rs  project_activator_activation_summary.rs  project_activator_agent_extensions_summary.rs  project_activator_codex_materialization.rs  project_activator_host_cli_materialization.rs  (+76 more)
crates/vida/tests/: boot_smoke.rs  doctor_surface_contract_smoke.rs  project_routing_shape.rs  task_smoke.rs
crates/vida/tests/support/: mod.rs
docs/: README.md  print-markdown-metadata-jsonl.py  print-markdown-summary-jsonl.py  project-root-map.changelog.jsonl  project-root-map.md  update-markdown-timestamp-and-changelog.py
install/: install.ps1  install.sh  release-notes-v0.2.0.changelog.jsonl  release-notes-v0.2.0.md  release-notes-v0.2.1.changelog.jsonl  release-notes-v0.2.1.md  release-notes-v0.2.2.changelog.jsonl  release-notes-v0.2.2.md  release-notes-v0.9.0.changelog.jsonl  release-notes-v0.9.0.md  release-notes-v0.9.1.changelog.jsonl  release-notes-v0.9.1.md  release-notes-v0.9.2.changelog.jsonl  release-notes-v0.9.2.md  release-notes-v0.9.3.changelog.jsonl  release-notes-v0.9.3.md
scripts/: build-release.sh  external-cli-carrier-smoke.sh  precommit-build-json.sh  render-public-release-notes.sh
taskflow-v0/: .env  .gitignore  README.changelog.jsonl  README.md  vida.nimble
tests/: test_install_docflow_bridge.py
unit-task: follow-up unresolved slice for locale remount/: manifest.json
unit-task: follow-up unresolved slice for navigation ownership drift/: manifest.json
vida/: print-markdown-metadata-jsonl.py  print-markdown-summary-jsonl.py  root-map.changelog.jsonl  root-map.md  update-markdown-timestamp-and-changelog.py
vida-v0/: README.md  vida.nimble
(+35179 files in other folders)
