[workspace]
members = [
    "crates/common-format-jsonl",
    "crates/common-format-toon",
    "crates/docflow-config",
    "crates/docflow-contracts",
    "crates/docflow-core",
    "crates/docflow-cli",
    "crates/docflow-format-jsonl",
    "crates/docflow-format-toon",
    "crates/docflow-inventory",
    "crates/docflow-markdown",
    "crates/docflow-operator",
    "crates/docflow-readiness",
    "crates/docflow-relations",
    "crates/docflow-validation",
    "crates/taskflow-config",
    "crates/taskflow-contracts",
    "crates/taskflow-core",
    "crates/taskflow-format-jsonl",
    "crates/taskflow-format-toon",
    "crates/taskflow-state",
    "crates/taskflow-state-fs",
    "crates/taskflow-state-surreal",
    "crates/vida",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.38", features = ["derive", "env"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-jsonlines = "0.7.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
toon-format = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
walkdir = "2.5.0"
