[package]
name = "docflow-format-jsonl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-format-jsonl = { path = "../common-format-jsonl" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
docflow-contracts = { path = "../docflow-contracts" }
docflow-core = { path = "../docflow-core" }
