[package]
name = "taskflow-format-jsonl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
taskflow-contracts = { path = "../taskflow-contracts" }
taskflow-core = { path = "../taskflow-core" }
