[package]
name = "taskflow-format-jsonl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-format-jsonl = { path = "../common-format-jsonl" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
taskflow-contracts = { path = "../taskflow-contracts" }
taskflow-core = { path = "../taskflow-core" }
