[package]
name = "taskflow-state-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
taskflow-contracts = { path = "../taskflow-contracts" }
taskflow-state = { path = "../taskflow-state" }

[dev-dependencies]
taskflow-core = { path = "../taskflow-core" }
