[package]
name = "vida"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vida"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.38", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "3.0.2", features = ["kv-surrealkv"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
